--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,19 @@
 <html>
     <head>
-        <title>El t&iacute;tulo del Post</title>
+        <title>Post Title</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>We make a blog post here</h1>
-        <p>This paragraph is begin</p>
+        <div class="container">
+            <div id="post">
+                <h1>We make a blog post here</h1>
+    
+                <p>It's an interesting article about the post.</p>
+                <p>The begin paragraph is the start where we go to explain
+                    amazing things that you can to do with "branch"
+                </p>
+            </div>
+        </div>
+
     </body>
 </html>
