Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div class="container">
+            <div class="cabecera">
+                Una cabecera
+            </div>
             <div id="post">
                 <h1>We make a blog post here</h1>
     
