--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     </head>
     <body>
+        <div id="cabecera">
+                Hyperblog
+        </div>
         <div class="container">
             <h1>T&iacute;tulo del Blog</h1>
             <p>Cuerpo del blog</p>
