Una versión del hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
                 Una cabecera
             </div>
             <div id="post">
-                <h1>We make a blog post here</h1>
+                <h1>We make a blog post here 2.0</h1>
     
                 <p>It's an interesting article about the post.</p>
                 <p>The begin paragraph is the start where we go to explain
