Color de fondo, logo nuevo y se crea Header

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <div class="container">
+            <div id="cabecera">
+                <img src="images/red-dragon.png" alt="Hyperblog" id="logo">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
             <div id="post">
                 <h1>We make a blog post here</h1>
     
