--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,11 @@
                     amazing things that you can to do with "branch"
                 </p>
             </div>
+            <div id="footer">
+                    Edwin QR
+            </div>
         </div>
+        
 
     </body>
 </html>
