Texto en cabecera modificado a Ingles

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img src="images/red-dragon.png" alt="Hyperblog" id="logo">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">You header Blog</span>
             </div>
             <div id="post">
                 <h1>We make a blog post here 2.0</h1>
